comment jekyll-octicons

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,8 +4,8 @@ collections_dir: collections
 collections:
   development:
     output: true
-plugins:
-  - jekyll-octicons    
+# plugins:
+#   - jekyll-octicons    
 defaults:
   - scope:
       path: ""
