--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "docs:update-package": "npx vp-update"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.61",
-    "vue": "^3.2.47",
-    "vuepress": "2.0.0-beta.61",
-    "vuepress-plugin-search-pro": "^2.0.0-beta.208",
-    "vuepress-theme-hope": "2.0.0-beta.207"
+    "@vuepress/client": "2.0.0-beta.63",
+    "vue": "^3.3.4",
+    "vuepress": "2.0.0-beta.63",
+    "vuepress-plugin-redirect": "^2.0.0-beta.225",
+    "vuepress-plugin-search-pro": "2.0.0-beta.225",
+    "vuepress-theme-hope": "2.0.0-beta.225"
   },
   "prettier": {
     "trailingComma": "none",
