--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "docs:update-package": "npx vp-update"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.66",
-    "vue": "^3.3.4",
-    "vuepress": "2.0.0-beta.66",
-    "vuepress-plugin-redirect": "^2.0.0-beta.233",
-    "vuepress-plugin-search-pro": "2.0.0-beta.233",
-    "vuepress-theme-hope": "2.0.0-beta.233"
+    "@vuepress/bundler-vite": "2.0.0-rc.19",
+    "@vuepress/plugin-slimsearch": "2.0.0-rc.66",
+    "sass-embedded": "^1.83.0",
+    "vue": "^3.5.13",
+    "vuepress": "2.0.0-rc.19",
+    "vuepress-theme-hope": "2.0.0-rc.64"
   },
   "prettier": {
     "trailingComma": "none",
     "arrowParens": "avoid",
     "printWidth": 100
-  }
+  },
+  "packageManager": "npm@10.9.2"
 }
