--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "docs.abapgit.org",
   "version": "1.0.0",
   "description": "abapGit Documentation",
-  "license": "UNLICENSED",
+  "license": "CC-BY-4.0",
   "type": "module",
   "scripts": {
     "docs:build": "vuepress build src",
